Slide show, Fixed not showing nav bar with card bug, click button styles

--- a/index.css
+++ b/index.css
@@ -282,3 +282,47 @@ form {
   color: #ffffff;
   cursor: pointer;
 }
+
+/* Hide all slides by default */
+.slide {
+  display: none;
+}
+
+/* Show active slide */
+.fade {
+  animation-name: fade;
+  animation-duration: 1s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Position the previous and next buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+/* Style the next button */
+.next {
+  right: 0;
+}
+
+/* Style the previous button */
+.prev {
+  left: 0;
+}
